# protowirers

./: .clippy.toml  CLAUDE.md  Cargo.toml  MODERNIZATION_PLAN.md  README.md  lefthook.yml  rust-toolchain.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
benches/: encode_decode.rs
impl/: Cargo.toml
impl/src/: ast.rs  expand.rs  lib.rs
src/: bytes.rs  decode.rs  encode.rs  error.rs  error_test.rs  lib.rs  parser.rs  reader.rs  wire.rs  zigzag.rs
tests/: sample.rs  tests.rs
tests/compile_fail/: bad_attribute.rs  def_type_is_duplicated.stderr  duplicate_def_attribute.rs  duplicate_def_attribute.stderr  duplicated_def_type.stderr  duplicated_field_num.rs  duplicated_field_num.stderr  duplicated_packed.rs  duplicated_packed.stderr  duplicated_repeated.rs  duplicated_repeated.stderr  field_num_is_duplicated.stderr  field_num_value_is_minus.rs  field_num_value_is_minus.stderr  invalid_field_num_value.rs  invalid_field_num_value.stderr  invalid_length_for_attribute.rs  invalid_length_for_attribute.stderr  mismatch_type.rs  mismatch_type.stderr  no_attribute.rs  no_attribute.stderr  no_def_attribute.rs  no_def_attribute.stderr  no_def_type.rs  no_def_type.stderr  no_field_num.rs  no_field_num.stderr  no_suported_def_type.rs  no_suported_def_type.stderr  unsupoted_meta_data.stderr  unsupoted_meta_data_format.rs  unsupoted_meta_data_format.stderr  unsupoted_meta_data_list.rs  unsupoted_meta_data_list.stderr  unsupoted_meta_datacopy.rs  unsupoted_meta_datacopy.stderr
