[package]
name = "protowirers"
version = "0.2.0"
authors = ["blck-snwmn <whitesnowmancreator@gmail.com>"]
edition = "2021"
rust-version = "1.87.0"

[workspace]
members = ["impl"]


[[test]]
name = "tests"
path = "tests/tests.rs"

[dependencies]
syn = { version = "2", features = ["full"] }
proc-macro2 = "1.0"
quote = "1.0"
thiserror = "2.0"
anyhow = "1.0"
trybuild = { version = "1.0.105", features = ["diff"] }

protowirers-impl = { version = "0.1.0", path = "impl" }
