[package]
name = "protowirers"
version = "0.2.0"
authors = ["blck-snwmn <whitesnowmancreator@gmail.com>"]
edition = "2021"

[workspace]
members = ["impl"]


[[test]]
name = "tests"
path = "tests/tests.rs"

[dependencies]
byteorder = "1"
syn={ version = "2", features = ["full"] }
proc-macro2="1.0"
quote = "1.0"
thiserror = "2.0"
trybuild = { version = "1.0.81", features = ["diff"] }

protowirers-impl={version="0.1.0", path = "impl"}
