[package]
name = "protowirers"
version = "0.2.0"
authors = ["blck-snwmn <whitesnowmancreator@gmail.com>"]
edition = "2021"

[workspace]
members = ["impl"]


[[test]]
name = "tests"
path = "tests/tests.rs"

[dependencies]
byteorder = "=1.5.0"
syn={ version = "=2.0.119", features = ["full"] }
proc-macro2="=1.0.107"
quote = "=1.0.47"
thiserror = "=2.0.19"
trybuild = { version = "=1.0.118", features = ["diff"] }

protowirers-impl={version="0.1.0", path = "impl"}
