[package]
name = "protowirers-impl"
version = "0.1.0"
authors = ["blck-snwmn <whitesnowmancreator@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
proc-macro2 = "1.0"
quote = "1.0"
thiserror = "2.0"

