[package]
name = "protowirers-impl"
version = "0.1.0"
authors = ["blck-snwmn <whitesnowmancreator@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
byteorder = "=1.5.0"
syn={ version = "=2.0.119", features = ["full"] }
proc-macro2="=1.0.107"
quote = "=1.0.47"
thiserror = "=2.0.19"
